fixed form centering

--- a/style.css
+++ b/style.css
@@ -23,6 +23,10 @@ nav h1 {
     text-align: center;
 }
 
+.container {
+    margin: 0 auto;
+    width: 25%;
+}
 
 #text-title {
     display: flex;
